# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = paragami
version          = attr: paragami.__version__
author           = Ryan Giordano
author_email     = rgiordano@berkeley.edu
description      = Parameter oragami
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = jax
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.6,
install_requires =
	tqdm
    jax
    blackjax
    numpy
 
[options.packages.find]
exclude =
    examples*
    docs*